--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "node scripts/build.js",
-    "build:shell": "cross-env APP_MODE=shell yarn build",
+    "build": "cross-env APP_MODE=shell node scripts/build.js",
     "build-storybook": "build-storybook -s public --quiet",
     "format": "prettier --write '{src,types,scripts}/**/*.{json,{j,t}s{,x},css,}'",
     "gen:codegen:dev": "dotenv -c local -- graphql-codegen --config codegen.project.dev.yml",
@@ -49,8 +48,15 @@
     "@babel/preset-typescript": "^7.10.4",
     "@bem-react/classname": "^1.5.8",
     "@bem-react/classnames": "^1.3.9",
-    "@gpn-prototypes/frontend-configs": "1.2.15",
-    "@gpn-prototypes/vega-ui": "3.0.7",
+    "@gpn-prototypes/frontend-configs": "^1.3.1",
+    "@gpn-prototypes/vega-ui": "^3.1.7",
+    "@graphql-codegen/add": "^2.0.2",
+    "@graphql-codegen/cli": "^1.20.1",
+    "@graphql-codegen/introspection": "1.16.3",
+    "@graphql-codegen/time": "^2.0.2",
+    "@graphql-codegen/typescript": "^1.16.3",
+    "@graphql-codegen/typescript-operations": "1.16.3",
+    "@graphql-codegen/typescript-react-apollo": "1.16.3",
     "@svgr/webpack": "4.3.3",
     "@testing-library/dom": "^7.24.1",
     "@testing-library/jest-dom": "^5.11.4",
@@ -72,6 +78,7 @@
     "@types/react-virtualized": "^9.21.10",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.7",
+    "@types/single-spa-react": "^2.12.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
@@ -87,19 +94,14 @@
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "classnames": "^2.2.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "3.4.2",
     "d3": "^6.1.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^7.13.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-loader": "^4.0.2",
-    "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^4.1.0",
     "file-loader": "4.3.0",
@@ -107,10 +109,12 @@
     "fs-extra": "^8.1.0",
     "graphql": "^15.3.0",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "http-proxy-middleware": "^1.0.5",
     "identity-obj-proxy": "3.0.0",
     "io-ts": "^2.1.3",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-junit": "^12.0.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "lodash": "^4.17.19",
@@ -163,19 +167,13 @@
     "uuid": "^8.3.1",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
+    "webpack-import-map-plugin": "^1.0.0-alpha0",
     "webpack-manifest-plugin": "2.2.0",
     "webpack-merge": "^5.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.20.1",
-    "@graphql-codegen/introspection": "1.16.3",
-    "@graphql-codegen/time": "^2.0.2",
-    "@graphql-codegen/typescript": "^1.16.3",
-    "@graphql-codegen/typescript-operations": "1.16.3",
-    "@graphql-codegen/typescript-react-apollo": "1.16.3",
     "@storybook/addon-actions": "^6.0.1",
     "@storybook/addon-knobs": "^6.0.1",
     "@storybook/addon-links": "^6.0.1",
@@ -183,24 +181,24 @@
     "@storybook/preset-create-react-app": "^3.1.4",
     "@storybook/react": "^6.0.1",
     "@storybook/theming": "^6.0.1",
-    "@types/single-spa-react": "^2.12.0",
-    "@types/uuid": "^8.3.0",
-    "clean-webpack-plugin": "^3.0.0",
     "commitizen": "^4.2.1",
-    "cross-env": "^7.0.2",
     "cz-customizable": "^6.3.0",
     "dotenv-cli": "^4.0.0",
-    "eslint-plugin-lodash-fp": "^2.2.0-a1",
-    "http-proxy-middleware": "^1.0.5",
+    "eslint": "^7.13.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
     "husky": "^4.2.5",
-    "jest-junit": "^12.0.0",
     "lint-staged": "^10.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "stylelint": "^13.7.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-prettier": "^1.1.2",
-    "webpack-import-map-plugin": "^1.0.0-alpha0"
+    "stylelint-prettier": "^1.1.2"
   },
   "proxy": "http://localhost:8080"
 }
